# motion_tracking_controller

./: CMakeLists.txt  LICENCE  README.md  motion_tracking_controller.xml  package.xml
config/g1/: controllers.yaml  jump_short.csv  kungfu_short.csv  on_board.yaml
include/legged_template_controller/: TemplateController.h
include/motion_tracking_controller/: DataLogger.h  MotionCommand.h  MotionObservation.h  MotionOnnxPolicy.h  MotionTrackingController.h  common.h
launch/: mujoco.launch.py  real.launch.py  wandb.launch.py
src/: DataLogger.cpp  MotionCommand.cpp  MotionObservation.cpp  MotionOnnxPolicy.cpp  MotionTrackingController.cpp  TemplateController.cpp
